<resources>
    <string name="app_name">Weather</string>
    <string name="openweather_apiID">5b5375e5f95b02ad0553a181b2dd9857</string>
    <string name="saved_city">Kyiv</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="language">English</string>
    <string name="share_text">Temperature is %1$s in %2$s place!</string>
    <string name="location_string">Coordinates: lat = %1$.4f, lon = %2$.4f, time = %3$tF %3$tT</string>

    <string name="provider_gps">GPS</string>
    <string name="provider_network">Network</string>
    <string name="location_settings">Location settings</string>

    <!-- Titles -->
    <string name="title_activity_control">Control</string>
    <string name="title_activity_configuration">Configuration</string>
    <string name="title_activity_language">Language</string>
    <string name="title_activity_perference">Perference</string>
    <!-- -->

    <!-- Settings menu -->
    <string name="configuration_notifications">Notifications</string>
    <string name="configuration_language">Language</string>
    <string name="configuration_data">Data</string>
    <string name="configuration_exit">Exit</string>
    <!-- -->

    <!-- Main Activity -->
    <string name="Min_tmp">Minimum Temperature</string>
    <string name="Max_tmp">Maximim Temperature</string>
    <string name="Tmp">Temperature</string>
    <string name="Pressure">Pressure</string>
    <!-- -->

    <!-- Menu items -->
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_settings_style">Old Settings</string>
    <string name="menu_item_exit">Exit</string>
    <!-- -->

    <!-- Service Notification -->
    <string name="service_notification_title">Weather are changing! You see? see that?</string>
    <string name="service_notification_ticker">Hello, are u see weather today?</string>
    <string name="service_notification_contentText">"Current temperature </string>
    <!-- -->

    <!-- Text Interpretate -->
    <string name="desription_setting_notifications_off">Notifications was turn off.</string>
    <string name="desription_setting_notifications_on">Notification is active</string>
    <!-- -->

<!-- Place activity -->
    <!-- Dialog menu-->
    <string name="dialog_place_menu_title">Menu</string>
    <string name="dialog_place_menu_choise">Choose</string>
    <string name="dialog_place_menu_delete">Delete</string>
    <string name="dialog_place_menu_cancel">Cancel</string>
    <!-- -->

    <!-- Dialog find by id-->
    <string name="dialog_place_find_city_hint">City</string>
    <string name="dialog_place_find_city_dis">Please, write city here!</string>
    <string name="dialog_place_find_message">Please, write city.</string>
    <string name="dialog_place_find_positive">Ok</string>
    <string name="dialog_place_find_negative">Cancel</string>

<!-- Place activity end -->

    <string name="cloudimage">CloudImage</string>
    <string name="nav_menu_header_text">My lovely weather app)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_category_name">Last cities</string>
    <string name="navigation_menu_item_findOnMap">Find on Map</string>
    <string name="navigation_menu_item_share">Share</string>
    <string name="title_activity_maps">Map</string>


</resources>
