<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:text="@string/dialog_place_menu_choise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_place_menu_choise" />

    <Button
        android:text="@string/dialog_place_menu_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_place_menu_delete" />

    <Button
        android:text="@string/dialog_place_menu_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_place_menu_cancel" />
</LinearLayout>