<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/main_layout"
    tools:context="com.example.gleb.first.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cityLineEdit"
        android:layout_marginTop="19dp"
        android:textSize="25dp"
        android:inputType="textPersonName"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2">
    </EditText>

    <TextView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:text="99.9 °C"
        android:id="@+id/tempView"
        android:gravity="center"
        android:textSize="40dp"
        android:textColor="#000000"
        android:textStyle="bold|italic"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="50dp"
        android:layout_row="4"
        android:layout_column="0" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weatherImage"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="30dp"
        android:layout_row="4"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Min_tmp"
        android:id="@+id/minTempText"
        android:layout_marginTop="50dp"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/minTempView"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="15dp"
        android:layout_row="5"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Max_tmp"
        android:id="@+id/maxTempText"
        android:layout_marginTop="25dp"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/maxTempView"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_row="6"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Pressure"
        android:id="@+id/pressureText"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="70dp"
        android:textSize="30dp"
        android:layout_row="7"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/pressureView"
        android:layout_marginTop="70dp"
        android:textSize="30dp"
        android:layout_row="7"
        android:layout_column="1" />

</GridLayout>